  Baumann.
* Fixed [=readlink(2)] function.  Correctly truncates content if buffer is too
  small.
* Fixed [=undefined symbol: rpl_malloc] error for compiled 32-bit library on
  64-bit architecture by dropping AC_FUNC_MALLOC in configure.ac.
* New FAKECHROOT_CMD_SUBST environment variable handles a list of substituted
  commands.  Thanks to Richard W.M. Jones.

== Version 2.9 ==

31 Mar 2009

* Fixed were made for [=getpeername](2) and [=getsockname](2) functions.  Thanks to
  Axel Thimm and Fedora people.
* Fixed were made for [=execve](2):
  * Always copy necessary variables to new environment.
  * Do not make duplicates of environment variables.  Thanks to Richard
    W.M. Jones.
* Fixed were made for [=chroot](2).  It is possible to escape chroot.  Thanks
  to Richard W.M. Jones.
* Fixed were made for [=mktemp](2).  There was a buffer overflow.  Thanks to
  Mikhail Gusarov.
* New function: [=futimesat](2).  Fixes "touch -m" command.
* New functions: [=bindtextdomain](3), [=inotify_add_watch](2).
* More test units was added, "make check" works as expected.

== Version 2.8 ==

25 Jul 2008

* Fixes were made for [=__fxstatat64](3) function which broke "chown" command
  on i386 architecture.
* Better support for FreeBSD was made.

== Version 2.7.1 ==

17 Jul 2008

* Compiles with older GNU libc: readlink type of return value is detected.
* Compiles with uClibc: existence of getwd function is detected.

== Version 2.7 ==

15 Jul 2008

* Stability and compatibility were improved for the latest libc.
* Fixes were made for latest version of coreutils.
* Fixed [=readlink](2) function to be ssize_t as it is in newer libc.
* New functions: [=__fxstatat](2), [=__fxstatat64](2), [=fchmodat](2), [=fchownat](2), [=__openat(2)], [=__openat64](2), [=unlinkat](2).  It fixes last coreutils.
* New functions: [=mkdirat(2)], [=renameat](2).
* Fixed [=chroot](2) function to not change current working directory.
* Fixed [=chroot](2) function to handle relative path.